face identify api test v1

--- a/mysite/.vscode/settings.json
+++ b/mysite/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.pythonPath": "C:\\Users\\Convrgytics\\Miniconda3\\envs\\cv-env\\python.exe"
 }
